@@ -58,6 +58,7 @@ gst_controller_remove_properties_valist
 gst_controller_set
 gst_controller_set_from_list
 gst_controller_unset
+gst_controller_unset_all
 gst_controller_get
 gst_controller_get_all
 gst_controller_sync_values
